# meter-cam-ingest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/ad-hoc-profile-load/: SKILL.md
.agents/skills/adversarial-squad/: SKILL.md
.agents/skills/spec-kitty/: SKILL.md
.agents/skills/spec-kitty-bulk-edit-classification/: SKILL.md
.agents/skills/spec-kitty-charter-doctrine/: SKILL.md
.agents/skills/spec-kitty-git-workflow/: SKILL.md
.agents/skills/spec-kitty-glossary-context/: SKILL.md
.agents/skills/spec-kitty-implement-review/: SKILL.md
.agents/skills/spec-kitty-mission-review/: SKILL.md
.agents/skills/spec-kitty-mission-system/: SKILL.md
.agents/skills/spec-kitty-orchestrator-api-operator/: SKILL.md
.agents/skills/spec-kitty-program-orchestrate/: SKILL.md
.agents/skills/spec-kitty-runtime-next/: SKILL.md
.agents/skills/spec-kitty-runtime-review/: SKILL.md
.agents/skills/spec-kitty-setup-doctor/: SKILL.md
.agents/skills/spec-kitty-spdd-reasons/: SKILL.md
.agents/skills/spk-admin-agent-config/: SKILL.md
.agents/skills/spk-admin-dashboard/: SKILL.md
.kittify/: agent_profiles_manifest.json  canonical-events.jsonl  command-skills-manifest.json  config.yaml  metadata.yaml  skills-manifest.json
deploy/: meter-cam-ingest.env.example  meter-cam-ingest.service
kitty-specs/meter-camera-ingest-service-01KWSKRQ/: acceptance-matrix.json  lanes.json  meta.json  plan.md  spec.md  status.events.jsonl  status.json  tasks.md
meter_cam_ingest/: __init__.py  server.py  storage.py
tests/: test_server.py  test_storage.py
(+59 files in other folders)
