[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meter-cam-ingest"
version = "0.1.0"
description = "Tiny LAN-only JPEG ingest service for monthly meter camera captures"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
